--- a/style.css
+++ b/style.css
@@ -10,10 +10,10 @@ h1{
 }
 input{
     height: 30px;
+    width: 168px;
+    text-align: right;
+    font-size: 20px;
 }
 button{
     width: 40px;
-}
-.igual{
-    width: 84px;
 }
